--- a/content/docs/Part 0 可复用思路/21. 合并两个有序链表.md
+++ b/content/docs/Part 0 可复用思路/21. 合并两个有序链表.md
@@ -59,3 +59,27 @@ public:
     }
 };
 ```
+
+```python
+# Definition for singly-linked list.
+# class ListNode(object):
+#     def __init__(self, val=0, next=None):
+#         self.val = val
+#         self.next = next
+class Solution(object):
+    def mergeTwoLists(self, l1: Optional[ListNode], l2: Optional[ListNode]):
+        d = ListNode()
+        c = d
+        while l1 and l2:
+            if l1.val < l2.val:
+                c.next = l1
+                l1 = l1.next
+            else:
+                c.next = l2
+                l2 = l2.next
+
+            c = c.next
+
+        c.next = l1 if l1 else l2
+
+        return d.next
