--- a/content/docs/Part 14 单调栈与单调队列/84. 柱状图中最大的矩形.md
+++ b/content/docs/Part 14 单调栈与单调队列/84. 柱状图中最大的矩形.md
@@ -33,6 +33,25 @@
 
 ## 解答
 
+### 代码
+
+```py
+def largestRectangleArea(heights):
+    # 在heights数组的开头和结尾分别添加高度为0的柱子，
+    # 以简化代码逻辑，处理边界情况
+    heights = [0] + heights + [0]
+    max_area = 0
+    stack = []  # 单调栈，存储柱子的索引
+    for i, h in enumerate(heights):
+        # 当前柱子的高度小于栈顶柱子的高度时，计算栈顶柱子的最大面积
+        while stack and heights[stack[-1]] > h:
+            height = heights[stack.pop()]
+            width = i - stack[-1] - 1
+            max_area = max(max_area, height * width)
+        stack.append(i)
+    return max_area
+```
+
 ### 思路详解
 
 以 `1 2 5 1 6 3` 为例。
@@ -117,28 +136,6 @@ area = 6
 6
 ```
 
-### 代码
-
-如果用上面的思路直接写代码，会发现如果遇到 `2 1 2` 这种输入就会算错。原因在于，如果栈已经空了，
-
-```cpp
-  int largestRectangleArea(vector<int>& heights) {
-    int n = static_cast<int>(heights.size()), maxarea = 0;
-    heights.push_back(0);
-    stack<int> stk;
-    int i = 0;
-    do {
-      while (stk.empty() || heights[stk.top()] < heights[i]) {
-        stk.push(i++);
-      }
-      auto outidx = stk.top(); stk.pop();
-      auto width = stk.empty() ? i : i - stk.top() - 1;
-      maxarea = max(width * heights[outidx], maxarea);
-    } while (i < n || !stk.empty());
-    return maxarea;
-  }
-```
-
 ### 注意事项
 
 * 向 `heights` 末尾推个 0, 这样能**促使末尾增长序列的结算**。
@@ -203,4 +200,3 @@ class Solution {
   }
 };
 ```
-
