--- a/content/docs/Part 4 堆/2402. 会议室 III.md
+++ b/content/docs/Part 4 堆/2402. 会议室 III.md
@@ -95,10 +95,150 @@ class Solution:
         
         # 返回举办最多次会议的房间编号
         return room_counts.index(max(room_counts))
-
 ```
 
 时间复杂度：O(n+m(log⁡n+log⁡m))，其中 m 为 meetings 的长度。注意每个会议至多入堆出堆各一次。
 空间复杂度：O(n)O(n)O(n)。
 
 本题题解原作者：<https://leetcode.cn/problems/meeting-rooms-iii/solutions/1799420/shuang-dui-mo-ni-pythonjavacgo-by-endles-ctwc/>
+
+### 代码编写过程拆解
+
+* 首先我们会想到，为了得到最终结果，需要一个 room_count 变量来记录每个会议室的使用次数。我们可以使用一个长度为 n 的数组来记录每个会议室的使用次数，初始化为 0。
+* 同时排序也安排上，方便对会议进行时间顺序的遍历。
+
+```python
+from typing import List
+
+class Solution:
+    def mostBooked(self, n: int, meetings: List[List[int]]) -> int:
+        room_counts = [0] * n
+        meetings.sort(key=lambda m: m[0])
+
+        for start, end in meetings:
+            ...
+
+        return room_counts.index(max(room_counts))
+```
+
+* 接下来我们想的是怎么安排每一个会议。那就分成两个情况，有空闲和无空闲：
+
+```python
+from heapq import heappush, heappop
+from typing import List
+
+class Solution:
+    def mostBooked(self, n: int, meetings: List[List[int]]) -> int:
+        room_counts = [0] * n
+        meetings.sort(key=lambda m: m[0])
+
+        for start, end in meetings:
+            if not is_free(start):
+                rearrange((new_start, new_end))
+            else:
+                room = get_room()
+                occupy(room)
+
+        return room_counts.index(max(room_counts))
+```
+
+* 为了获取一个空闲的 room，我们自然想到使用一个最小堆来存储空闲的会议室编号。
+
+* 同时，我们还需要一个最小堆来存储使用中的会议室的结束时间和编号。这样我们就可以在 O(1) 的时间内获取最早结束的会议室。
+
+* 自然的，`is_free(room)` 的判断标准就是当前时间是否小于最早结束的会议室的结束时间。考虑到可能有多个会议室同时结束，我们需要使用一个 while 循环来处理。
+
+```python
+from heapq import heappush, heappop
+from typing import List
+
+class Solution:
+    def mostBooked(self, n: int, meetings: List[List[int]]) -> int:
+        room_counts = [0] * n
+        meetings.sort(key=lambda m: m[0])
+
+        for start, end in meetings:
+
+            if not room_idx:
+                rearrange((new_start, new_end))
+            else:
+                occupy(room_idx)
+
+        return room_counts.index(max(room_counts))
+```
+
+```python
+from heapq import heappush, heappop
+from typing import List
+
+class Solution:
+    def mostBooked(self, n: int, meetings: List[List[int]]) -> int:
+        room_counts = [0] * n
+        meetings.sort(key=lambda m: m[0])
+
+        for start, end in meetings:
+            
+            if not room_idx:
+                rearrange((new_start, new_end))
+            else:
+                occupy(room_idx)
+
+        return room_counts.index(max(room_counts))
+```
+
+```python
+
+from heapq import heappush, heappop
+from typing import List
+
+class Solution:
+    def mostBooked(self, n: int, meetings: List[List[int]]) -> int:
+        room_counts = [0] * n
+        meetings.sort(key=lambda m: m[0])
+        idle_rooms = range(n)
+        active_rooms = []
+        I_END_TIME = 0
+        I_ROOM_IDX
+
+        for start, end in meetings:
+            while active_rooms and active_rooms[0][I_END_TIME] < start:
+                heappush(idle_rooms, heappop(active_rooms)[I_ROOM_IDX])
+                
+            if not room_idx:
+                rearrange((new_start, new_end))
+            else:
+                occupy(room_idx)
+
+        return room_counts.index(max(room_counts))
+```
+
+```python
+
+from heapq import heappush, heappop
+from typing import List
+
+class Solution:
+    def mostBooked(self, n: int, meetings: List[List[int]]) -> int:
+        room_counts = [0] * n
+        meetings.sort(key=lambda m: m[0])
+        idle_rooms = list(range(n))
+        active_rooms = []
+        I_END_TIME = 0
+        I_ROOM_IDX = 1
+
+        for start, end in meetings:
+            while active_rooms and active_rooms[0][I_END_TIME] <= start:
+                heappush(idle_rooms, heappop(active_rooms)[I_ROOM_IDX])
+            room_idx = heappop(idle_rooms) if idle_rooms else None
+
+            if room_idx is None:
+                earliest_end, room_idx = heappop(active_rooms)
+                end = end - start + earliest_end
+
+            room_counts[room_idx] += 1
+            heappush(active_rooms, (end, room_idx))
+
+        return room_counts.index(max(room_counts))
+```
+
+于是得到了最终代码。按照编写思路得到的最终代码可能每次都略有不同，但是思路是一样的，也都能得到正确的结果。
