--- a/content/docs/Part 4 堆/2402. 会议室 III.md
+++ b/content/docs/Part 4 堆/2402. 会议室 III.md
@@ -78,22 +78,21 @@ class Solution:
         meetings.sort(key=lambda m: m[0])
         
         for start, end in meetings:
-            # 维护在当前时间点空闲的会议室
+            # 每到一个时间点，我们就计算一下当前空闲的会议室是否有一个或多个会议结束
             while active_rooms and active_rooms[0][0] <= start:
-                heappush(idle_rooms, heappop(active_rooms)[1])
-            
-            # 如果没有空闲会议室，弹出一个最早结束的会议室，并更新当前会议的结束时间
-            if not idle_rooms:
+                room = heappop(active_rooms)[1]
+                heappush(idle_rooms, room)
+
+            # 尝试获取一个空闲的会议室
+            room_idx = heappop(idle_rooms) if idle_rooms else None
+            if room_idx is None:
                 earliest_end, room_idx = heappop(active_rooms)
-                end += earliest_end - start
-            else:
-                room_idx = heappop(idle_rooms)
-            
-            # 更新会议室计数器和使用中的会议室列表
+                end = end - start + earliest_end
+
+            # 更新统计值和占用的会议室结束时间
             room_counts[room_idx] += 1
             heappush(active_rooms, (end, room_idx))
-        
-        # 返回举办最多次会议的房间编号
+
         return room_counts.index(max(room_counts))
 ```
 
