--- a/content/docs/Part 14 单调栈与单调队列/42. 接雨水.md
+++ b/content/docs/Part 14 单调栈与单调队列/42. 接雨水.md
@@ -29,7 +29,43 @@
 * `1 <= n <= 2 * 104`
 * `0 <= height[i] <= 105`
 
-## 解答
+## 解答（计算每个位置）
+
+首先分别计算每个位置的左侧最高和右侧最高墙，然后计算每个位置能够接住的水量，最后将所有位置能够接住的水量相加，得到最终的返回值。
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <algorithm>
+using namespace std;
+// debug
+class Solution {
+public:
+    int trap(vector<int>& height) {
+        int n = static_cast<int>(height.size());
+        vector<int> left(n, 0);
+        vector<int> right(n, 0);
+
+        int lfence=0;
+        int rfence=0;
+        for(int i = 0; i < n; i++) {
+            lfence = max(lfence, height[i]);
+            left[i] = lfence;
+        }
+        for(int j = n - 1; j >=0; j--) {
+            rfence = max(rfence, height[j]);
+            right[j] = rfence;
+        }
+        int ret = 0;
+        for(int i = 0; i < n; i++) {
+            ret += min(left[i], right[i]) - height[i];
+        }
+        return ret;
+    }
+};
+```
+
+## 解答（单调递减栈）
 
 ### 思路详解
 
